<resources>
    <string name="app_name">Firebase Chat</string>
    <string name="chat_with_friends">Now chat with your friends with 100 \npercent privacy.</string>
    <string name="welcome_back">Welcome back.</string>
    <string name="name">Name</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="ConfirmPassoword">Confirm Password</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="new_user">I am new user? Click here.</string>
    <string name="alreadyuser">Already have an Account?</string>
    <string name="create_account">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="current_password">Current Password</string>
    <string name="proceed">Proceed</string>

    <string name="name_error">Name can not be empty</string>
    <string name="email_error">Email can not be empty</string>
    <string name="password_error">Password can not be empty</string>
    <string name="confirm_password_error">Confirm Password can not be empty</string>
    <string name="Password_does_not_match">Password and Confirm Password does not match.</string>
    <string name="password_length_error">password lengeth should be greate then 6 char.</string>
    <string name="users">Users</string>
    <string name="Groups">Groups</string>
    <string name="select_participant">Select Participants</string>
    <string name="profile">Profile</string>
    <string name="Logout_message">Are you sure you want to logout from the app?</string>
    <string name="logout">Logout</string>
    <string name="no">No</string>


    <string name="no_data_found">No data found</string>
    <string name="ok">ok</string>
    <string name="yes">yes</string>
    <string name="please_wait">Please wait....</string>
    <string name="no_internet">No Internet</string>
    <string name="type_your_message">Type your message..</string>
    <string name="message_error">Message should not be blank</string>
    <string name="status">Hey there i am using whatsapp</string>
    <string name="change_password">Change Password</string>
</resources>