<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.activity.MainActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:layout_centerInParent="true"
      android:layout_height="wrap_content">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:src="@drawable/user"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:id="@+id/text"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/create_account"
        android:textSize="@dimen/_18sdp" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/reg_name"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_8sdp"
        android:hint="@string/name"
        android:background="@drawable/background_edit"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/reg_email"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_8sdp"
        android:hint="@string/username"
        android:background="@drawable/background_edit"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/reg_Password"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_8sdp"
        android:hint="@string/password"
        android:background="@drawable/background_edit"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/reg_confirmPassword"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:padding="@dimen/_8sdp"
        android:inputType="textPassword"
        android:hint="@string/ConfirmPassoword"
        android:background="@drawable/background_edit"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/signup"
        android:id="@+id/signUp"
        android:textColor="@color/white"
        android:background="@drawable/background_button"
        android:layout_height="wrap_content"/>
  </LinearLayout>

  <TextView
      android:id="@+id/newUser"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerInParent="true"
      android:layout_gravity="center"
      android:layout_marginStart="@dimen/_10sdp"
      android:layout_marginTop="@dimen/_10sdp"
      android:layout_marginEnd="@dimen/_10sdp"
      android:layout_marginBottom="@dimen/_10sdp"
      android:text="@string/alreadyuser"
      android:textSize="@dimen/_12sdp" />
</RelativeLayout>