<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="center"
            android:src="@drawable/chat"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:id="@+id/text"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/welcome_back"
            android:textSize="@dimen/_18sdp" />

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/email"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_8sdp"
            android:hint="@string/username"
            android:background="@drawable/background_edit"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/password"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:padding="@dimen/_8sdp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/background_edit"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:text="Login"
            android:id="@+id/btnsignIn"
            android:textColor="@color/white"
            android:background="@drawable/background_button"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/new_user"
        android:textSize="@dimen/_12sdp" />
</RelativeLayout>