<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/_30sdp"
    android:layout_marginRight="@dimen/_30sdp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/black"
        android:padding="@dimen/_5sdp"
        android:id="@+id/header"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/change_password"
        android:layout_height="wrap_content"></TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:hint="Email"
        android:id="@+id/email"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        android:background="@drawable/background_edit"
        android:layout_height="wrap_content">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:id="@+id/cancel"
            android:paddingBottom="@dimen/_8sdp"
            android:paddingTop="@dimen/_8sdp"
            android:layout_margin="@dimen/_3sdp"
            android:background="@drawable/background_button"
            android:text="@string/cancel"
            android:layout_height="wrap_content"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/_14sdp"
            android:layout_weight="1"
            android:id="@+id/ResetPassword"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:gravity="center"
            android:background="@drawable/background_button"
            android:textColor="@color/white"
            android:paddingBottom="@dimen/_8sdp"
            android:paddingTop="@dimen/_8sdp"
            android:layout_margin="@dimen/_3sdp"
            android:text="@string/submit"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>

</LinearLayout>
