<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.activity.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/topLinear"
        android:background="@color/purple_500"
        android:layout_alignParentTop="true"
        android:layout_height="@dimen/_40sdp">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />


        <ImageView
            android:id="@+id/updatePassword"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_toLeftOf="@+id/submit"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_update_24" />

        <ImageView
            android:id="@+id/submit"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_check_circle_24" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_images"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_gravity="center"
            android:src="@drawable/user"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/_18sdp" />

        <EditText
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/status"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>
</RelativeLayout>